retrieveUnpackaged/objects/Test_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Release_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release Version</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Test Plans</relationshipLabel>
        <relationshipName>Test_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Plan__c</fullName>
        <label>Test Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Test Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TP-{000000}</displayFormat>
        <label>Test Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>